--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       cursor: default;
     }
   </style>
+  <title>Star history</title>
 </head>
 
 <body>
@@ -62,6 +63,7 @@
       <input type="text" id="repo" placeholder="twbs/bootstrap">
       <button type="button" name="button">Get star history</button>
     </form>
+    
   </div>
 <iframe src="https://ghbtns.com/github-btn.html?user=timqian&repo=star_history&type=star&count=true" frameborder="0" scrolling="0" width="100px" height="30px"></iframe>
 <iframe src="https://ghbtns.com/github-btn.html?user=timqian&repo=star_history&type=fork&count=true" frameborder="0" scrolling="0" width="108px" height="30px"></iframe>
