--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <svg></svg>
   </div>
   <h4>
-    News: <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a> is now available. (with higher rate limit)
+    <a href="https://github.com/timqian/star-history-plugin">Chrome extension version of star-history</a>
   </h4>
   </script>
   <script type="text/javascript" src="./dist/bundle.js" charset="utf-8"></script>
