--- a/index.html
+++ b/index.html
@@ -73,3 +73,16 @@
   </h4>
   </script>
   <script type="text/javascript" src="./dist/bundle.js" charset="utf-8"></script>
+
+<!--广告-->
+  <form action="http://www.google.com" id="cse-search-box">
+    <div>
+      <input type="hidden" name="cx" value="partner-pub-3099121198874984:7445379755" />
+      <input type="hidden" name="ie" value="UTF-8" />
+      <input type="text" name="q" size="55" />
+      <input type="submit" name="sa" value="Search" />
+    </div>
+  </form>
+
+  <script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
+
