--- a/website/index.html
+++ b/website/index.html
@@ -75,7 +75,7 @@
             <img src="./header.ico" width="28" height="28" />
           </a>
           <a class="navbar-item" href="http://github.com/timqian/star-history">
-            <strong>Source Code</strong>
+            <strong>About</strong>
           </a>
           <a class="navbar-item" href="https://chrome.google.com/webstore/detail/iijibbcdddbhokfepbblglfgdglnccfn">
             <strong>Chrome Extension</strong>
