--- a/website/index.html
+++ b/website/index.html
@@ -139,23 +139,31 @@
     <div class="container">
       <hr style="background-color:#dbdbdb; height: 1px" />
       <div style="float:left">
-        Build with <i class="far fa-heart"></i> by
-        <a href="https://twitter.com/tim_qian"> Tim Qian</a>
+        Build by
+        <a href="https://twitter.com/tim_qian"><span class="tag is-info is-rounded"><strong>@tim_qian</strong></span></a>
       </div>
       <div style="float: right">
+
         <a
           class="icon button is-white"
-          href="https://twitter.com/t9tio"><i class="fab fa-twitter"></i></a>
+          href="https://spectrum.chat/t9tio">
+          <i><svg viewBox="0 0 16 16" width="15" height="15"><g fill="#111111"><path d="M0,1.067A1.067,1.067,0,0,1,1.067,0H2A14,14,0,0,1,16,14v.933A1.067,1.067,0,0,1,14.933,16H9.067A1.067,1.067,0,0,1,8,14.933V14A6,6,0,0,0,2,8H1.067A1.067,1.067,0,0,1,0,6.933Z" fill="#111111"></path></g></svg></i>
+        </a>
+
         <a
           class="icon button is-white"
-          href="https://join.slack.com/t/cloudfetch/shared_invite/enQtNTA5NzIyNTU2Mzc1LTIwNzZiODZkNzFiODY0NTM4OWViYjgxN2JkNGY0NzJiYWQzNTcwYzM3NjMwMmE2N2RkMzE0ZGRlYWJkYTY3Yzg"><i
-            class="fab fa-slack"></i></a>
+          href="https://twitter.com/t9tio"><i class="fab fa-twitter"></i>
+        </a>
+
         <a
-          class="icon button is-white"
-          href="https://user-images.githubusercontent.com/5512552/40399903-53d1ebde-5e72-11e8-98d8-615fc40c09f1.jpeg"><i
-            class="fab fa-weixin"></i></a>
-        <a class="icon button is-white" href="mailto:timqian92@qq.com"><i
-            class="fas fa-envelope"></i></a>
+        class="icon button is-white"
+        href="https://raw.githubusercontent.com/timqian/images/master/3811553342733_.pic.jpg">
+        <i class="fab fa-weixin"></i>
+        </a>
+
+        <a class="icon button is-white" href="mailto:timqian92@qq.com">
+          <i class="fas fa-envelope"></i>
+        </a>
       </div>
     </div>
   </footer>
