update chart height

--- a/website/index.html
+++ b/website/index.html
@@ -33,7 +33,7 @@
       padding: 10px;
       max-width: 800px;
       min-width: 70%;
-      height: 75%;
+      height: 75vh;
     }
 
     #button-group {
