--- a/website/index.html
+++ b/website/index.html
@@ -106,7 +106,7 @@
             star-history got 1k stars on 
             <a href="https://github.com/timqian/star-history">github</a> 
             recently. 
-            In celebration of it, the 
+            In celebration of this, the 
             <a href="https://chrome.google.com/webstore/detail/iijibbcdddbhokfepbblglfgdglnccfn">chrome extension</a> is 67% off in the following week ($0.99).
         </div>
       </article>
