add back extension ad

--- a/website/index.html
+++ b/website/index.html
@@ -97,8 +97,19 @@
 
   <dev class="section">
     <div class="container has-text-centered">      
-
-
+      <article class="message is-success" id="discount-message">
+        <div class="message-header">
+          <p>Try the chrome extension</p>
+          <button class="delete" aria-label="delete" id="delete-discount"></button>
+        </div>
+        <div class="message-body">
+            star-history got 1k stars on 
+            <a href="https://github.com/timqian/star-history">github</a> 
+            recently. 
+            In celebration of this, the
+            <a href="https://chrome.google.com/webstore/detail/iijibbcdddbhokfepbblglfgdglnccfn">chrome extension</a> is 67% off($0.99).
+        </div>
+      </article>
       <div class="search-container">
         <div class="field has-addons">
           <div class="control is-expanded">
