Fix very minor spelling issue (build → built)
Fixed a very minor spelling issue I happened to notice. "Build" is used
for the present tense ("I will build this"), and "built" is for the past
tense ("I built this").

It's one of those confusing language things 😅 The same applies to some
other verbs ending with a "d" by the way (send probably being the most
common).

--- a/website/index.html
+++ b/website/index.html
@@ -142,7 +142,7 @@
     <div class="container">
       <hr style="background-color:#dbdbdb; height: 1px" />
       <div style="float:left">
-        Build by
+        Built by
         <a href="https://twitter.com/tim_qian"><span
             class="tag is-info is-rounded"><strong>@tim_qian</strong></span></a>
       </div>
