iterate commit history
Signed-off-by: yiyiyimu <wosoyoung@gmail.com>

--- a/website/index.html
+++ b/website/index.html
@@ -64,14 +64,8 @@
   <nav class="navbar is-dark" style="z-index: 1">
     <div class="container">
       <div class="navbar-brand">
-        <a class="navbar-item" href="https://t9t.io">
-          <img src="./header.ico" width="28" height="28" />
-        </a>
-        <a class="navbar-item" href="http://github.com/timqian/star-history">
+        <a class="navbar-item" href="http://github.com/yiyiyimu/star-history">
           <strong>Github</strong>
-        </a>
-        <a class="navbar-item" href="https://chrome.google.com/webstore/detail/iijibbcdddbhokfepbblglfgdglnccfn">
-          <strong>Chrome Extension</strong>
         </a>
 
         <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
@@ -97,17 +91,9 @@
 
   <dev class="section">
     <div class="container has-text-centered">      
-      <article class="message is-success" id="discount-message">
-        <div class="message-header">
-          <p>Try the chrome extension</p>
-          <button class="delete" aria-label="delete" id="delete-discount"></button>
-        </div>
+      <article class="message is-success">
         <div class="message-body">
-            star-history got 1k stars on 
-            <a href="https://github.com/timqian/star-history">github</a> 
-            recently. 
-            In celebration of this, the
-            <a href="https://chrome.google.com/webstore/detail/iijibbcdddbhokfepbblglfgdglnccfn">chrome extension</a> is 67% off($0.99).
+            Currently running slow, go to console to get progress.
         </div>
       </article>
       <div class="search-container">
@@ -117,7 +103,7 @@
           </div>
           <p class="control">
             <button class="button is-dark is-outlined" id="theBtn">
-              View star history
+              View contributor history
             </button>
           </p>
 
@@ -142,27 +128,12 @@
     <div class="container">
       <hr style="background-color:#dbdbdb; height: 1px" />
       <div style="float:left">
-        Built by
-        <a href="https://twitter.com/tim_qian"><span
-            class="tag is-info is-rounded"><strong>@tim_qian</strong></span></a>
+        Designed by
+        <a href="https://twitter.com/tim_qian"><strong>tim_qian</strong></a>, 
+        modified by 
+        <a href="https://github.com/yiyiyimu"><strong>yiyiyimu</strong></a>
       </div>
       <div style="float: right">
-
-        <a class="icon button is-white" href="https://github.com/timqian">
-          <i class="fab fa-github"></i>
-        </a>
-        <a class="icon button is-white" href="https://twitter.com/tim_qian">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a class="icon button is-white" href="https://join.slack.com/t/t9tio/shared_invite/enQtNjgzMzkwMDM0NTE3LTE5ZTUzYjU4Y2I0YzRiZjNkYTkzMzE1ZmM0NDdmYzRlZmMxNGY1MzZlN2EwYjYyNWVlMWY0Nzk2MDBhNWZlY2I">
-          <i class="fab fa-slack"></i>
-        </a>
-        <a class="icon button is-white" href="https://raw.githubusercontent.com/timqian/images/master/3811553342733_.pic.jpg">
-          <i class="fab fa-weixin"></i>
-        </a>
-        <a class="icon button is-white" href="mailto:timqian92@qq.com">
-          <i class="fas fa-envelope"></i>
-        </a>
       </div>
     </div>
   </footer>
@@ -175,10 +146,10 @@
         <button id="closeModalBtn" class="delete" aria-label="close"></button>
       </header>
       <section class="modal-card-body">
-        <p>Star-history use GitHub API to retrieve repository metadata. You may see this page because you have hit the
+        <p>Contributor-history use GitHub API to retrieve repository metadata. You may see this page because you have hit the
           <a href="https://developer.github.com/v3/#rate-limiting">GitHub API rate limit</a>. </p>
         <br />
-        <p>Star-history will need your <a href="https://github.com/settings/tokens">personal access token</a> to unlimit
+        <p>Contributor-history will need your <a href="https://github.com/settings/tokens">personal access token</a> to unlimit
           it. If you don't already have one, <a href="https://github.com/settings/tokens/new">create one</a>, and paste
           it into the textbox below (no scope to your personal data is needed)</p>
 
