--- a/extension/popup.html
+++ b/extension/popup.html
@@ -76,26 +76,22 @@
     </style>
   </head>
   <body>
-    <h2>Star History</h2>
+    <h2>Contributor History</h2>
     <div id="container">
       <div id="chart">
         <svg></svg>
       </div>
       <img src="./assets/loadinfo.net.gif" alt="Loding..." id="theGif">
     </div>
-    <a href="https://github.com/timqian/star-history"
+    <a href="https://github.com/yiyiyimu/contributor-history"
       style="position: absolute; bottom: 2px; left:5px;">
       Source code
-    </a>
-    <a href="https://star-history.t9t.io"
-      style="position: absolute; bottom: 2px; right:5px;">
-      Open in website
     </a>
     <div>
         <img id="setting-ico" src="./assets/cog-solid.svg"
         />
         <div id="setting-div" style="visibility: hidden;">
-          <p><strong>Access Token</strong> <a href="https://github.com/timqian/star-history#access-token">(?)</a></p>
+          <p><strong>Access Token</strong> <a href="https://github.com/yiyiyimu/contributor-history#access-token">(?)</a></p>
           <input id="token-input" placeholder="90c6b8218dae4122b07b4a0fae252c619a08941b"/>
           <p><button id="setting-save-btn">Save change</button></p>
         </div>
