remove discount message

--- a/website/index.html
+++ b/website/index.html
@@ -33,6 +33,7 @@
       padding: 10px;
       max-width: 800px;
       min-width: 70%;
+      min-height: 50vh;
       /* height: 75vh; */
     }
 
@@ -67,9 +68,6 @@
         <a class="navbar-item" href="https://t9t.io">
           <img src="./header.ico" width="28" height="28" />
         </a>
-        <a class="navbar-item" href="http://github.com/timqian/star-history">
-          <strong>Github</strong>
-        </a>
         <a class="navbar-item" href="https://chrome.google.com/webstore/detail/iijibbcdddbhokfepbblglfgdglnccfn">
           <strong>Chrome Extension</strong>
         </a>
@@ -97,19 +95,6 @@
 
   <dev class="section">
     <div class="container has-text-centered">      
-      <article class="message is-success" id="discount-message">
-        <div class="message-header">
-          <p>Try the chrome extension</p>
-          <button class="delete" aria-label="delete" id="delete-discount"></button>
-        </div>
-        <div class="message-body">
-            star-history got 1k stars on 
-            <a href="https://github.com/timqian/star-history">github</a> 
-            recently. 
-            In celebration of this, the
-            <a href="https://chrome.google.com/webstore/detail/iijibbcdddbhokfepbblglfgdglnccfn">chrome extension</a> is 67% off($0.99).
-        </div>
-      </article>
       <div class="search-container">
         <div class="field has-addons">
           <div class="control is-expanded">
@@ -148,19 +133,16 @@
       </div>
       <div style="float: right">
 
-        <a class="icon button is-white" href="https://github.com/timqian">
+        <a class="icon button is-white" href="https://github.com/timqian/star-history">
           <i class="fab fa-github"></i>
         </a>
         <a class="icon button is-white" href="https://twitter.com/tim_qian">
           <i class="fab fa-twitter"></i>
         </a>
-        <a class="icon button is-white" href="https://join.slack.com/t/t9tio/shared_invite/enQtNjgzMzkwMDM0NTE3LTE5ZTUzYjU4Y2I0YzRiZjNkYTkzMzE1ZmM0NDdmYzRlZmMxNGY1MzZlN2EwYjYyNWVlMWY0Nzk2MDBhNWZlY2I">
-          <i class="fab fa-slack"></i>
-        </a>
         <a class="icon button is-white" href="https://raw.githubusercontent.com/timqian/images/master/3811553342733_.pic.jpg">
           <i class="fab fa-weixin"></i>
         </a>
-        <a class="icon button is-white" href="mailto:timqian92@qq.com">
+        <a class="icon button is-white" href="mailto:timqian@t9t.io">
           <i class="fas fa-envelope"></i>
         </a>
       </div>
