--- a/website/index.html
+++ b/website/index.html
@@ -171,7 +171,7 @@
         <br />
 
         <label class="label">access token (will be stored in your local storage)</label>
-        <input class="input" id="tokenInput" placeholder="90c6b8218dae4122b07b4a0fae252c619a08941b" /><
+        <input class="input" id="tokenInput" placeholder="90c6b8218dae4122b07b4a0fae252c619a08941b" />
       </section>
       <footer class="modal-card-foot">
         <button id="saveTokenBtn" class="button is-success">Save</button>
