--- a/website/index.html
+++ b/website/index.html
@@ -148,7 +148,7 @@
     </div>
   </nav>
 
-  <dev class="section">
+  <div class="section">
     <div class="container has-text-centered">
       <div class="search-container">
         <div class="field has-addons">
@@ -165,7 +165,7 @@
       </div>
 
     </div>
-    <div class="container has-text-centered">
+    <div class="container">
       <div id="chart">
         <svg></svg>
       </div>
@@ -176,8 +176,19 @@
         <button id="CSVBtn" class="button is-success">Export as CSV</button>
       </div>
     </div>
-  </dev>
-
+  </div>
+  <div class="section">
+  <div class="container has-text-centered">
+    <strong>
+      Special Sponsor
+    </strong>
+  </div>
+    <div class="container has-text-centered">
+      <a class="" href="https://bytebase.com/">
+        <img src="https://i.v2ex.co/3VSATzOl.png" width="250px" alt="bytebase"/>
+      </a>
+    </div>
+  </div>
   <!-- Footer -->
   <footer class="footer" style="background-color:white">
     <div class="container">
