Add plausible script

--- a/website/index.html
+++ b/website/index.html
@@ -62,6 +62,7 @@
 
     gtag('config', 'UA-56506279-5');
   </script>
+  <script defer data-domain="star-history.com" src="https://plausible.io/js/plausible.js"></script>
 </head>
 
 <body>
