--- a/website/index.html
+++ b/website/index.html
@@ -54,13 +54,13 @@
   <title>Star history</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-56506279-5"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MLYC5BTWS1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'UA-56506279-5');
+    gtag('config', 'G-MLYC5BTWS1');
   </script>
   <script defer data-domain="star-history.com" src="https://plausible.io/js/plausible.js"></script>
 </head>
