--- a/website/index.html
+++ b/website/index.html
@@ -46,7 +46,7 @@
       max-width: 800px;
       display: inline-block;
     }
-    
+
     .modal-card-foot {
       justify-content: flex-end !important;
     }
@@ -154,7 +154,7 @@
       <div class="search-container">
         <div class="field has-addons">
           <div class="control is-expanded">
-            <input class="input is-dark" type="text" id="repo" name="repo" placeholder="timqian/star-history">
+            <input class="input is-dark" type="text" id="repo" name="repo" placeholder="bytebase/star-history">
           </div>
           <p class="control">
             <button class="button is-dark is-outlined" id="theBtn">
@@ -179,14 +179,14 @@
     </div>
   </div>
   <div class="section">
-  <div class="container has-text-centered">
-    <strong>
-      Special Sponsor
-    </strong>
-  </div>
+    <div class="container has-text-centered">
+      <strong>
+        Special Sponsor
+      </strong>
+    </div>
     <div class="container has-text-centered">
       <a class="" href="https://bytebase.com/">
-        <img src="https://i.v2ex.co/3VSATzOl.png" width="250px" alt="bytebase"/>
+        <img src="https://i.v2ex.co/3VSATzOl.png" width="250px" alt="bytebase" />
       </a>
     </div>
   </div>
@@ -195,23 +195,19 @@
     <div class="container">
       <hr style="background-color:#dbdbdb; height: 1px" />
       <div style="float:left">
-        Built by
+        Originally built by
         <a href="https://twitter.com/tim_qian"><span
             class="tag is-info is-rounded"><strong>@tim_qian</strong></span></a>
       </div>
       <div style="float: right">
 
-        <a class="icon button is-white" href="https://github.com/timqian/star-history">
+        <a class="icon button is-white" href="https://github.com/bytebase/star-history">
           <i class="fab fa-github"></i>
         </a>
-        <a class="icon button is-white" href="https://twitter.com/tim_qian">
+        <a class="icon button is-white" href="https://twitter.com/bytebaseHQ">
           <i class="fab fa-twitter"></i>
         </a>
-        <a class="icon button is-white"
-          href="https://raw.githubusercontent.com/timqian/images/master/3811553342733_.pic.jpg">
-          <i class="fab fa-weixin"></i>
-        </a>
-        <a class="icon button is-white" href="mailto:timqian@t9t.io">
+        <a class="icon button is-white" href="mailto:support@bytebase.com">
           <i class="fas fa-envelope"></i>
         </a>
       </div>
