Add github star icon

--- a/website/index.html
+++ b/website/index.html
@@ -64,6 +64,7 @@
     gtag('config', 'G-MLYC5BTWS1');
   </script>
   <script defer data-domain="star-history.com" src="https://plausible.io/js/plausible.js"></script>
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 
 <body>
@@ -71,7 +72,7 @@
   <nav class="navbar is-dark" style="z-index: 1">
     <div class="container">
       <div class="navbar-brand">
-        <a class="navbar-item" href="https://t9t.io">
+        <a class="navbar-item" href="https://www.star-history.com">
           <img src="./header.ico" width="28" height="28" />
         </a>
         <a class="navbar-item" href="https://chrome.google.com/webstore/detail/iijibbcdddbhokfepbblglfgdglnccfn">
@@ -144,6 +145,11 @@
                   <i class="far fa-setting"></i>
                 </span> -->
           </a>
+          <div class="navbar-item" style="margin-top: 4px">
+            <a class="github-button" href="https://github.com/bytebase/star-history"
+              data-color-scheme="no-preference: light; light: light; dark: dark;" data-size="medium"
+              data-show-count="true" aria-label="Star star-history on GitHub">Star</a>
+          </div>
         </div>
       </div>
     </div>
@@ -182,7 +188,7 @@
   <div class="section">
     <div class="container has-text-centered">
       <strong>
-        Special Sponsor
+        Sponsored by
       </strong>
     </div>
     <div class="container has-text-centered">
@@ -202,14 +208,14 @@
       </div>
       <div style="float: right">
 
-        <a class="icon button is-white" href="https://github.com/bytebase/star-history">
-          <i class="fab fa-github"></i>
-        </a>
         <a class="icon button is-white" href="https://twitter.com/bytebaseHQ">
           <i class="fab fa-twitter"></i>
         </a>
         <a class="icon button is-white" href="mailto:support@bytebase.com">
           <i class="fas fa-envelope"></i>
+        </a>
+        <a class="icon button is-white" href="https://github.com/bytebase/star-history">
+          <i class="fab fa-github"></i>
         </a>
       </div>
     </div>
