Use the favicon as the main icon

--- a/website/index.html
+++ b/website/index.html
@@ -73,7 +73,7 @@
     <div class="container">
       <div class="navbar-brand">
         <a class="navbar-item" href="https://www.star-history.com">
-          <img src="./header.ico" width="28" height="28" />
+          <img src="./favicon.ico" width="28" height="28" />
         </a>
         <a class="navbar-item" href="https://chrome.google.com/webstore/detail/iijibbcdddbhokfepbblglfgdglnccfn">
           <strong>Chrome Extension</strong>
