Hint the user can put the full github url in the searchbox placeholder

--- a/website/index.html
+++ b/website/index.html
@@ -161,7 +161,8 @@
       <div class="search-container">
         <div class="field has-addons">
           <div class="control is-expanded">
-            <input class="input is-dark" type="text" id="repo" name="repo" placeholder="bytebase/star-history">
+            <input class="input is-dark" type="text" id="repo" name="repo"
+              placeholder="bytebase/star-history or https://github.com/bytebase/star-history">
           </div>
           <p class="control">
             <button class="button is-dark is-outlined" id="theBtn">
