Update wording to improve SEO hopefully

--- a/website/index.html
+++ b/website/index.html
@@ -52,7 +52,7 @@
       justify-content: flex-end !important;
     }
   </style>
-  <title>Star history</title>
+  <title>GitHub Star History</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MLYC5BTWS1"></script>
@@ -203,9 +203,12 @@
     <div class="container">
       <hr style="background-color:#dbdbdb; height: 1px" />
       <div style="float:left">
-        Originally built by
-        <a href="https://twitter.com/tim_qian"><span
-            class="tag is-info is-rounded"><strong>@tim_qian</strong></span></a>
+        <h1>The missing GitHub star history graph.</h1>
+        <div style="margin-top: 4px; font-size: small;">
+          Originally built by
+          <a href="https://twitter.com/tim_qian"><span
+              class="tag is-info is-rounded"><strong>@tim_qian</strong></span></a>
+        </div>
       </div>
       <div style="float: right">
 
