--- a/website/index.html
+++ b/website/index.html
@@ -42,6 +42,10 @@
       visibility: hidden;
     }
 
+    #sponsor {
+      visibility: hidden;
+    }
+
     .search-container {
       min-width: 70%;
       max-width: 800px;
@@ -72,7 +76,7 @@
   <nav class="navbar is-dark" style="z-index: 1">
     <div class="container">
       <div class="navbar-brand">
-        <a class="navbar-item" href="https://www.star-history.com">
+        <a class="navbar-item" href="/">
           <img src="./favicon.ico" width="28" height="28" />
         </a>
         <a class="navbar-item" href="https://chrome.google.com/webstore/detail/iijibbcdddbhokfepbblglfgdglnccfn">
@@ -186,20 +190,26 @@
       </div>
     </div>
   </div>
-  <div class="section">
+  <div id="sponsor" style="margin-top: 32px">
     <div class="container has-text-centered">
       <strong>
-        Sponsored by
+        Sponsored by <a href="https://bytebase.com" target="__blank">Bytebase</a>, open source, web-based database
+        schema change
+        and version control
+        for <span
+          style="color: #2563EB; box-shadow: rgb(255, 255, 255) 0px -0.166667em 0px 0px inset, rgb(186, 230, 253) 0px -0.333333em 0px 0px inset;">teams</span>.
       </strong>
     </div>
-    <div class="container has-text-centered">
-      <a class="" href="https://bytebase.com/">
-        <img src="https://i.v2ex.co/3VSATzOl.png" width="250px" alt="bytebase" />
+    <div class="container has-text-centered" style="margin-top: 10px">
+      <a class="" href="https://bytebase.com/" target="__blank">
+        <img style="padding-left: 10px; padding-right: 10px" src="./assets/bytebase.webp" width="850px"
+          alt="bytebase" />
       </a>
     </div>
   </div>
   <!-- Footer -->
-  <footer class="footer" style="background-color:white">
+
+  <footer style="background-color:white;">
     <div class="container">
       <hr style="background-color:#dbdbdb; height: 1px" />
       <div style="float:left">
