Add a bit bottom margin to the footer

--- a/website/index.html
+++ b/website/index.html
@@ -212,7 +212,7 @@
   <footer style="background-color:white;">
     <div class="container">
       <hr style="background-color:#dbdbdb; height: 1px" />
-      <div style="float:left">
+      <div style="float:left; margin-bottom: 4px;">
         <h1>The missing GitHub star history graph.</h1>
         <div style="margin-top: 4px; font-size: small;">
           Originally built by
