Tweak sponsor style

--- a/website/index.html
+++ b/website/index.html
@@ -193,16 +193,18 @@
   <div id="sponsor" style="margin-top: 32px">
     <div class="container has-text-centered">
       <strong>
-        Sponsored by <a href="https://bytebase.com" target="__blank">Bytebase</a>, open source, web-based database
+        Sponsored by <a href="https://bytebase.com" target="__blank">Bytebase</a>
+      </strong>
+      <div>Open source, web-based database
         schema change
         and version control
-        for <span
-          style="color: #2563EB; box-shadow: rgb(255, 255, 255) 0px -0.166667em 0px 0px inset, rgb(186, 230, 253) 0px -0.333333em 0px 0px inset;">teams</span>.
-      </strong>
+        for <strong><span
+            style="color: #2563EB; box-shadow: rgb(255, 255, 255) 0px -0.166667em 0px 0px inset, rgb(186, 230, 253) 0px -0.333333em 0px 0px inset;">TEAMS</span></strong>.
+      </div>
     </div>
     <div class="container has-text-centered" style="margin-top: 10px">
       <a class="" href="https://bytebase.com/" target="__blank">
-        <img style="padding-left: 10px; padding-right: 10px" src="./assets/bytebase.webp" width="850px"
+        <img style="padding-left: 10px; padding-right: 10px" src="./assets/bytebase.webp" width="700px"
           alt="bytebase" />
       </a>
     </div>
