Revert to use Star History
Somehow we lose all the search ranking...

--- a/website/index.html
+++ b/website/index.html
@@ -56,7 +56,7 @@
       justify-content: flex-end !important;
     }
   </style>
-  <title>GitHub Star History</title>
+  <title>Star History</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MLYC5BTWS1"></script>
